<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.LevelChooseFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_level_text"
                android:textSize="24sp" />

            <Button
                android:id="@+id/test_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test" />

            <Button
                android:id="@+id/easy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/easy"
                tools:ignore="TextContrastCheck" />


            <Button
                android:id="@+id/middle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/middle"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/hard_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/hard"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </FrameLayout>
</layout>