<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.StartFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/brain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_relation"/>


    <TextView
        android:id="@+id/tv_relation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relation_tag"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_relation_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relations_text"
        app:layout_constraintTop_toBottomOf="@id/tv_relation"
        android:padding="16dp"/>

    <Button
        android:id="@+id/proceed_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>